--- a/style.css
+++ b/style.css
@@ -71,6 +71,7 @@ button{
     display: flex;
     flex-direction: column;
     background-color: white;
+    padding: 12px;
 }
 
 .body-title{
@@ -81,12 +82,14 @@ button{
     font-weight: bold;
     color: #1F2937;
     font-family: sans-serif;
+    margin-top: 15px;
 }
 
 .card-container{
     display: flex;
     justify-content: center;
     gap: 30px;
+    margin: 30px;
 }
 
 .card{
@@ -95,12 +98,19 @@ button{
     
     max-width: 150px;
     height: auto;
-    border: 4px #3882f6;
+    
+}
+
+.card img{
+    border: 4px solid #3882f6;
+    border-radius: 12px;
 }
 
 .cards{
     text-align: center;
     font-family: sans-serif;
+    font-size: 15px;
+    color: #6c6c6e;
 }
 .card img{
 
@@ -108,4 +118,90 @@ button{
 .card ul{
     display: flex;
     justify-content: center;
+}
+
+.body-two{
+    display: flex;
+    flex-direction: column;
+    background-color: #E5E7EB;
+    color: #1F2937;
+    min-height: 150px;
+    justify-content: center;
+    align-items: center;
+    padding: 60px;
+}
+
+.quote-container{
+    display: flex;
+    flex-direction: column;
+    justify-content: space-around;
+    align-items: center;
+    max-width: 500px;
+    height: auto;
+}
+
+.quote{
+    font-size: 24px;
+    font-family: sans-serif;
+}
+
+.body-three{
+    background-color: white;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    padding: 60px;
+
+}
+
+.call-to-action{
+    background-color: #3882f6;
+    display: flex;
+    border-radius: 8px;
+    height: auto;
+    justify-content: space-between;
+    align-items: center;
+    padding: 20px 100px 20px 100px;
+    gap: 100px;
+}
+
+.c2a-left{
+    display: flex;
+    flex-direction: column;
+    
+}
+
+.c2a-title{
+    color: #F9FAF8;
+    font-size: 18px;
+    font-family: sans-serif;
+    font-weight: 900;
+}
+
+.subtext{
+    color: #E5E7EB;
+    width: max-content;
+}
+
+.button2{
+    color: #F9FAF8;
+    background-color: #3882f6;
+    font-family: sans-serif;
+    font-weight: bold;
+    border-radius: 8px;
+    border: none;
+    padding: 7px;
+    margin-top: 12px;
+    border: 2px solid white;
+}
+
+.footer{
+    background-color: #1F2937;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    color: white;
+    font-family: sans-serif;
+    height: 80px;
+    margin-top: auto;
 }
